(docs) : 운영체제_쉬운코드 10강 꼬리 질문 추가

--- a/운영체제_쉬운코드/[10강] 꼬리 질문.md
+++ b/운영체제_쉬운코드/[10강] 꼬리 질문.md
@@ -1,5 +1,74 @@
 ## 1. User mode vs Kernel mode
 
+참고
+
+[https://hongong.hanbit.co.kr/운영체제란-커널의-개념-응용-프로그램-실행을-위한/](https://hongong.hanbit.co.kr/%EC%9A%B4%EC%98%81%EC%B2%B4%EC%A0%9C%EB%9E%80-%EC%BB%A4%EB%84%90%EC%9D%98-%EA%B0%9C%EB%85%90-%EC%9D%91%EC%9A%A9-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8-%EC%8B%A4%ED%96%89%EC%9D%84-%EC%9C%84%ED%95%9C/)
+
+[https://www.geeksforgeeks.org/difference-between-user-mode-and-kernel-mode/?ref=gcse](https://www.geeksforgeeks.org/difference-between-user-mode-and-kernel-mode/?ref=gcse)
+
+<br/>
+
+### 커널
+
+> 운영체제의 핵심 서비스를 담당하는 부분
+
+- 핵심 서비스
+
+  - 자원에 접근하고 조작하는 기능
+  - 프로그램이 올바르고 안전하게 실행되게 하는 기능
+
+커널은 사용자가 실행하는 응용 프로그램이 하드웨어 자원에 직접 접근하는 것을 방지하여 자원을 보호한다.
+
+만약 응용 프로그램이 CPU, 메모리, 하드 디스크 등에 마음대로 접근하고 조작할 수 있다면 자원이 무질서하게 관리될 것이고, 응용 프로그램이 조금만 실수해도 컴퓨터 전체에 큰 악영향을 끼칠 수 있기 때문이다.
+
+따라서, 커널은 응용 프로그램들이 자원에 접근하려고 할 때 오직 자신을 통해서만 접근하도록 하여 자원을 보호한다.
+
+→ 이중 모드 방식으로 보호
+
+- **이중 모드**: CPU가 명령어를 실행하는 모드를 크게 사용자 모드와 커널 모드로 구분하는 방식
+
+<br/>
+
+### 사용자 모드
+
+> 운영체제 서비스를 제공받을 수 없는 실행 모드
+
+→ 커널 영역의 코드를 실행할 수 없는 모드
+
+일반적인 응용 프로그램은 기본적으로 사용자 모드로 실행된다.
+
+그러나 사용자 모드로 실행 중인 CPU는 입출력 명령어와 같이 하드웨어 자원에 접근하는 명령어를 실행할 수 없다.
+
+따라서, 사용자 모드로 실행되는 일반적인 응용 프로그램은 자원에 접근할 수 없다.
+
+<br/>
+
+### 커널 모드
+
+> 운영체제 서비스를 제공받을 수 있는 실행 모드
+
+→ 커널 영역의 코드를 실행할 수 있는 모드
+
+CPU가 커널 모드로 명령어를 실행하면 자원에 접근하는 명령어를 비롯한 모든 명령어를 실행할 수 있다.
+
+- 커널 모드는 사용자 모드에 비해 더 많은 권한을 갖는다.
+- 커널 모드는 사용자 프로그램과 커널 프로그램 모두 접근할 수 있으므로 제한이 없다.
+
+운영체제는 커널 모드로 실행되기 때문에 자원에 접근할 수 있다.
+
+<br/>
+
+|                                                      | Kernel mode | User mode |
+|------------------------------------------------------| --- | --- |
+| Access to Resources                                  | 커널 모드에서는 시스템 리소스에 접근하는데 아무런 제한이 없다. | 사용자 모드에서는 시스템 리소스에 직접 접근할 수 없다. 리소스에 접근하려면 시스템 콜을 통해 요청해야 한다.
+|
+| Interruptions                                        | 커널 모드에서 인터럽트가 발생하면 전체 운영 체제가 다운될 수 있다. | 사용자 모드에서 인터럽트가 발생하면 단일 프로세스가 실패한다.   |
+| Virtual address space                                | 커널 모드에서 모든 프로세스는 단일 가상 주소 공간을 공유한다. | 사용자 모드에서 모든 프로세스는 별도의 가상 주소 공간을 얻는다. |
+| Mode bit value (CPU가 현재 어떤 모드로 작동하고 있는지 판단할 수 있는 플래그) | mode bit 0 | mode bit 1 |
+| Memory References                                    | 커널 모드, 사용자 모드 모두의 메모리 영역을 참조할 수 있다. | 사용자 모드에 할당된 메모리만 참조할 수 있다.  |
+| System Crash                                         | 커널 모드의 시스템 충돌은 리스크가 크고 상황을 더욱 복잡하게 만든다. | 사용자 모드에서는 세션을 재개하여 간단히 시스템 충돌을 복구할 수 있다. |
+| Access                                               | 필수 기능만 커널 모드에서 작동하도록 허용된다. | 사용자 프로그램은 유저 모드에서 접근하고 실행할 수 있다. |
+
 <br/><br/>
 
 ## 2. **시스템 콜도 인터럽트의 한 종류라고 볼 수 있는가?**
